--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">Sanjeev</a>.
     </div>
   </body>
 </html>
